--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@ Our Youtube analysis requires a forked version of Chromium browser which logs re
 Tested on Ubuntu 15.04 and 15.10
 <div>
 <h2>dependencies</h2><p>
+<pre>
 sudo apt-get install python autoconf g++-4.9 unzip python-matplotlib gcc pkg-config zlib1g-dev debhelper autotools-dev dh-autoreconf iptables protobuf-compiler libprotobuf-dev pkg-config libssl-dev dnsmasq-base ssl-cert libxcb-present-dev libcairo2-dev libpango1.0-dev iproute2 apache2-dev apache2-bin gcc-arm-linux-gnueabihf g++-4.9-multilib-arm-linux-gnueabihf gcc-4.9-multilib-arm-linux-gnueabihf git g++-5-multilib-arm-linux-gnueabihf
-<div>
+</pre>
+
 <h2>youtube-dl</h2><p>
+<pre>
 sudo wget https://yt-dl.org/downloads/2015.08.09/youtube-dl -O /usr/local/bin/youtube-dl
 sudo chmod a+rx /usr/local/bin/youtube-dl
+</pre>
 
-<div>
 <h2>SSIM</h2><p>
+<pre>
 git clone https://github.com/saundershayes/SSIM.git
 cd SSIM
 autoreconf -fi
@@ -22,9 +26,10 @@ sudo apt-get install libavutil-dev libavformat-dev libswscale-dev libx264-dev
 make -j
 #TODO: fix warnings in SSIM maybe?
 cd ..
+</pre>
 
-<div>
 <h2>mahimahi-fork</h2><p>
+<pre>
 git clone https://github.com/saundershayes/mahimahi.git
 cd mahimahi
 ./autogen.sh
@@ -32,7 +37,7 @@ cd mahimahi
 make -j
 sudo make install
 cd ..
-
+</pre>
 
 </body>
 
