--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@ Tested on Ubuntu 15.04 and 15.10
 <div>
 <h2>dependencies</h2><p>
 
-<div style="white-space: pre-wrap;">content</div>
+<div style="white-space: pre-wrap;">
 sudo apt-get install python autoconf g++-4.9 unzip python-matplotlib gcc pkg-config zlib1g-dev debhelper autotools-dev dh-autoreconf iptables protobuf-compiler libprotobuf-dev pkg-config libssl-dev dnsmasq-base ssl-cert libxcb-present-dev libcairo2-dev libpango1.0-dev iproute2 apache2-dev apache2-bin gcc-arm-linux-gnueabihf g++-4.9-multilib-arm-linux-gnueabihf gcc-4.9-multilib-arm-linux-gnueabihf git g++-5-multilib-arm-linux-gnueabihf
 </div>
 
 <h2>youtube-dl</h2><p>
-<div style="white-space: pre-wrap;">content</div>
+<div style="white-space: pre-wrap;">
 sudo wget https://yt-dl.org/downloads/2015.08.09/youtube-dl -O /usr/local/bin/youtube-dl
 sudo chmod a+rx /usr/local/bin/youtube-dl
 </div>
 
 <h2>SSIM</h2><p>
-<div style="white-space: pre-wrap;">content</div>
+<div style="white-space: pre-wrap;">
 git clone https://github.com/saundershayes/SSIM.git
 cd SSIM
 autoreconf -fi
@@ -30,7 +30,7 @@ cd ..
 </div>
 
 <h2>mahimahi-fork</h2><p>
-<div style="white-space: pre-wrap;">content</div>
+<div style="white-space: pre-wrap;">
 git clone https://github.com/saundershayes/mahimahi.git
 cd mahimahi
 ./autogen.sh
