--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 Our Youtube analysis requires a forked version of Chromium browser which logs render calls, a youtube video download script, an SSIM analysis tool, and a forked version of the mahimahi network emulation toolkit which supports youtube playback in mm-webrecord.
 <p>
 Tested on Ubuntu 15.04 and 15.10
-<div>
+<p>
 
-<h2>Dependencies</h2><p>
+<h2>Dependencies</h2>
 <div style="white-space: pre-wrap; font-family:monospace;">
 sudo apt-get install python autoconf g++-4.9 unzip python-matplotlib gcc pkg-config zlib1g-dev debhelper autotools-dev dh-autoreconf iptables protobuf-compiler libprotobuf-dev pkg-config libssl-dev dnsmasq-base ssl-cert libxcb-present-dev libcairo2-dev libpango1.0-dev iproute2 apache2-dev apache2-bin gcc-arm-linux-gnueabihf g++-4.9-multilib-arm-linux-gnueabihf gcc-4.9-multilib-arm-linux-gnueabihf git g++-5-multilib-arm-linux-gnueabihf
 </div>
 
-<h2>youtube-dl</h2><p>
+<h2>youtube-dl</h2>
 <div style="white-space: pre-wrap; font-family:monospace;">
 sudo wget https://yt-dl.org/downloads/2015.08.09/youtube-dl -O /usr/local/bin/youtube-dl
 sudo chmod a+rx /usr/local/bin/youtube-dl
 </div>
 
-<h2>SSIM</h2><p>
+<h2>SSIM</h2>
 <div style="white-space: pre-wrap; font-family:monospace;">
 git clone https://github.com/saundershayes/SSIM.git
 cd SSIM
@@ -29,7 +29,7 @@ make -j
 cd ..
 </div>
 
-<h2>mahimahi-fork</h2><p>
+<h2>mahimahi-fork</h2>
 <div style="white-space: pre-wrap; font-family:monospace;">
 git clone https://github.com/saundershayes/mahimahi.git
 cd mahimahi
